@@ -1,3 +1,8 @@
+2024-01-02 Philipp Klaus Krause <philipp@colecovision.eu>
+
+	* index.php:
+	  Announce SDCC 4.4.0 RC2.
+
 2023-12-21 Philipp Klaus Krause <philipp@colecovision.eu>
 
 	* index.php:
